Loader: Create bound components into their creation context

It's unclear why we need a separate context for the created objects in
the first place.

Fixes: QTBUG-108684
Change-Id: Id6213a8cc61f54064162e7caa26ec7a6b38ddc2b
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Semih Yavuz <semih.yavuz@qt.io>