tests/auto/quick/qquickloader/data/boundComponent.qml
@@ -1,0 +1,12 @@
+pragma ComponentBehavior: Bound
+import QtQuick
+
+Item {
+    id: root
+
+    Loader {
+        sourceComponent: Item {
+            Component.onCompleted: root.objectName = "loaded"
+        }
+    }
+}
